deploy.k8s/minio-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gzctf-minio
  namespace: gzctf-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gzctf-minio
  template:
    metadata:
      labels:
        app: gzctf-minio
    spec:
      nodeSelector:
        kubernetes.io/hostname: node0
      containers:
      - name: gzctf-minio
        image: minio/minio:latest
        args:
          - server
          - /data
          - --console-address
          - ":9001"
        ports:
          - containerPort: 9000
          - containerPort: 9001
        volumeMounts:
          - name: minio-storage
            mountPath: /data
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
